log
Thu 23 Mar 2023 12:24:54 AM UTC: 
 tests:  0|6
total_score: 0/70
72d0701
Thu 23 Mar 2023 12:40:30 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b7ab54f
Thu 23 Mar 2023 12:42:42 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8d671f4
Thu 23 Mar 2023 12:43:28 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c222a62
Thu 23 Mar 2023 12:43:52 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
84625d0
Thu 23 Mar 2023 12:44:53 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0be725d
Thu 23 Mar 2023 12:46:57 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9bafc0c
Thu 23 Mar 2023 12:47:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:10: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   42 |   return 2/*list->head*/;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
8d01b60
Thu 23 Mar 2023 12:50:53 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7527a1f
Thu 23 Mar 2023 12:53:08 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
744ce55
Thu 23 Mar 2023 12:53:51 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
084c8ab
Thu 23 Mar 2023 12:55:45 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
e60f11b
Thu 23 Mar 2023 12:58:20 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
828a44f
Thu 23 Mar 2023 12:59:15 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
5a8dede
Thu 23 Mar 2023 01:01:26 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
46450d8
Thu 23 Mar 2023 01:03:40 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
958e9f1
Thu 23 Mar 2023 01:05:00 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f6175a8
